--- a/requirements.txt
+++ b/requirements.txt
@@ -9,4 +9,4 @@ python_speech_features==0.6
 plotly==5.24.1
 streamlit-audiorec==0.1.3
 scapy==2.6.1
-stream-js-eval==0.1.7
+streamlit-js-eval==0.1.7
