--- a/requirements.txt
+++ b/requirements.txt
@@ -8,5 +8,4 @@ scipy==1.10.1
 python_speech_features==0.6
 plotly==5.24.1
 streamlit-audiorec==0.1.3
-scapy==2.6.1
-streamlit-js-eval==0.1.7
+extra-streamlit-components==0.1.71
